# claude-hangar

./: .gitattributes  .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOVER.md  LICENSE  README.md  RESEARCH.md  SECURITY.md  TODO.md  install.sh  integrate.sh  setup.sh  skills_index.json
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  skill_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  welcome.yml
core/: CLAUDE.md.template  settings-lite.json.template  settings.json.template  statusline-command.sh
core/agents/: architect.md  build-resolver-go.md  build-resolver-python.md  build-resolver-typescript.md  commit-reviewer.md  dependency-checker.md  doc-updater.md  explorer-deep.md  explorer.md  go-reviewer.md  harness-optimizer.md  loop-operator.md  mcp-builder.md  performance-optimizer.md  plan-reviewer.md  planner.md  python-reviewer.md  refactor-agent.md  security-reviewer.md  tdd-guide.md  test-writer.md  typescript-reviewer.md
core/contexts/: README.md  dev.md  research.md  review.md
core/hooks/: bash-guard.sh  batch-format-collector.sh  checkpoint.sh  config-change-guard.sh  config-protection.sh  continuous-learning.sh  cost-tracker.sh  db-query-guard.sh  design-quality-check.sh  (+25 more)
docs/: agentic-security.md  architecture.md  awesome-claude-code-submission.md  capability-surface-guide.md  claude-code-referenz.md  companion-tools.md  configuration.md  faq.md  getting-started.md  mcp-guide.md  memory-optimization.md  migration.md  monitors.md  multi-project.md  patterns.md  skill-adaptation-policy.md  task-system.md  token-optimization.md  troubleshooting.md  writing-agents.md  writing-hooks.md  writing-skills.md
hooks/: hooks.json
i18n/: i18n.md
registry/: deploy.sh  example-registry.json  registry.schema.json
rules/: README.md
stacks/: README.md
tests/: hangar-lint.sh  test-hooks.sh  test-lens-discover.sh  test-mcp.sh  test-models.sh  test-setup.sh
tools/repomind/: .coverage  README.md  pyproject.toml
tools/repomind/src/repomind/: __init__.py  __main__.py  cli.py  config.py  state.py  sync.py  util.py
tools/repomind/templates/gold-standard/: Dashboard.md  OBSIDIAN-SETUP.md
tools/repomind/templates/gold-standard/docs/: INDEX.md  _INDEX.md
tools/repomind/tests/: conftest.py  test_cli.py  test_config.py  test_state.py  test_sync.py  test_util.py
(+274 files in other folders)
